# adsb-watcher

./: .gitignore  README.md  config.example.json  config.json  pyproject.toml  watcher.py
services/: adsb-watcher.service  adsb-watcher.xml  com.adsb-watcher.plist
